--- a/main_page.html
+++ b/main_page.html
@@ -87,8 +87,8 @@
       <label><input value="signup" type="radio" name="login">Sign up</label>
 
       <section id="login">
-        <textarea id="username"></textarea>
-        <textarea id="password"></textarea>
+        <textarea id="login-username"></textarea>
+        <textarea id="login-password"></textarea>
 
         <label class="switch">
           <input type="checkbox">
@@ -99,9 +99,9 @@
       </section>
 
       <section id="signup" class="hidden">
-        <textarea id="username"></textarea>
-        <textarea id="password"></textarea>
-        <textarea id="confirm-pass"></textarea>
+        <textarea id="signup-username"></textarea>
+        <textarea id="signup-password"></textarea>
+        <textarea id="confirm-password"></textarea>
 
         <label class="switch">
           <input type="checkbox">
@@ -111,7 +111,5 @@
         <button>Sign up</button>
       </section>
     </section>
-
-    <section id="billing"></section>
   </body>
 </html>
