--- a/main_page.html
+++ b/main_page.html
@@ -87,8 +87,10 @@
       <label><input value="signup" type="radio" name="login">Sign up</label>
 
       <section id="login">
-        <textarea id="login-username"></textarea>
-        <textarea id="login-password"></textarea>
+        <p>Username: </p>
+        <textarea id="login-username">Insert Username Here</textarea>
+        <p>Password: </p>
+        <textarea id="login-password">Insert Password Here</textarea>
 
         <label class="switch">
           <input type="checkbox">
@@ -99,9 +101,12 @@
       </section>
 
       <section id="signup" class="hidden">
-        <textarea id="signup-username"></textarea>
-        <textarea id="signup-password"></textarea>
-        <textarea id="confirm-password"></textarea>
+        <p>Username: </p>
+        <textarea id="signup-username">Insert Username Here</textarea>
+        <p>Password: </p>
+        <textarea id="signup-password">Insert Password Here</textarea>
+        <p>Reconfirm Password: </p>
+        <textarea id="confirm-password">Confirm Password Here</textarea>
 
         <label class="switch">
           <input type="checkbox">
