Added Hidden Classes

--- a/main_page.html
+++ b/main_page.html
@@ -35,18 +35,20 @@
       </article>
     </header>
 
-    <section id="filters">
-      //Create a bunch of buttons and put them here with filterable things (probably get them from online)
+    <section id="search">
+      <section id="filters">
+        //Create a bunch of buttons and put them here with filterable things (probably get them from online)
+      </section>
+
+      <section id="item-display">
+        <article class="main-item">sample item</article>
+        <article class="main-item">sample item</article>
+        <article class="main-item">sample item</article>
+        <article class="main-item">sample item</article>
+      </section>
     </section>
 
-    <section id="item-display">
-      <article class="main-item">sample item</article>
-      <article class="main-item">sample item</article>
-      <article class="main-item">sample item</article>
-      <article class="main-item">sample item</article>
-    </section>
-
-    <section id="specific-display">
+    <section id="specific-display" class="hidden">
       <img src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
       <h1>Product Name</h1>
       <p>Price here</p>
@@ -62,7 +64,7 @@
       <button id="add-cart">Add To Cart</button>
     </section>
 
-    <section id="check-out">
+    <section id="check-out" class="hidden">
       <section id="products">
         <article class="checkout-product">
           <p>SampleProduct</p>
@@ -82,7 +84,7 @@
       <button id="check-out">Check Out</button>
     </section>
 
-    <section id="user">
+    <section id="user" class="hidden">
       <label><input value="login" type="radio" name="login">Log In</label>
       <label><input value="signup" type="radio" name="login">Sign up</label>
 
