--- a/main_page.html
+++ b/main_page.html
@@ -15,24 +15,29 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&display=swap"
     rel="stylesheet">
-    <title>A&A shopping fr</title>
+    <title>AYAF & Company: Internet Goods</title>
   </head>
   <body>
-    <header id="navbar">
-      <img id="logo" src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
-
-      <textarea id="search-bar"></textarea>
-
-      <article id="cart">
+    <header>
+      <div id="logo">
         <img src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
-        <p>x items in cart</p>
-      </article>
-
-      <article id="user-profile">
-        <img src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
-      </article>
+        <h1>AYAF & Company</h1>
+      </div>
+      <nav>
+        <ul id="nav_elements">
+          <li>
+            <a href="#">Cart</a>
+          </li>
+          <li>
+            <input id="searchbar" type="text" placeholder="Search..">
+          </li>
+          <li id="user-profile">
+            <a href="#">My Profile</a>
+          </li>
+        </ul>
+      <nav>
     </header>
 
     <section id="search">
