Added some changes

--- a/main_page.html
+++ b/main_page.html
@@ -21,23 +21,28 @@
   </head>
   <body>
     <header>
-      <div id="logo">
+      <article id="logo">
         <img src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
         <h1>AYAF & Company</h1>
-      </div>
+      </article>
       <nav>
         <ul class="nav_elements">
           <li id="cart">
-            <p>cart</p>
+            <img src="https://media.istockphoto.com/id/1206806317/vector/shopping-cart-icon-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=OFQfvkU48JTYo1aehyB1kPX7sh2CjA5I66Pdmc9qxho="
+            alt="Photo of shopping cart">
+            <p>My Cart</p>
           </li>
           <li>
-            <input id="search-bar" type="text" placeholder="Search..">
+            <input id="search-bar" type="text" placeholder="Enter Item...">
+            <button id="search-btn">Search</button>
           </li>
           <li id="user-profile">
+            <img id="">
             <p>Log In/Sign Up</p>
           </li>
         </ul>
       <nav>
+      <button id="back-btn">Back to Search</button>
     </header>
 
     <section id="search">
@@ -82,7 +87,7 @@
       </article>
 
       <article id="coupons">
-        <textarea></textarea>
+        <input></input>
 
         <button id="coupon">Apply Coupon</button>
       </article>
@@ -97,9 +102,9 @@
 
       <section id="login">
         <p>Username: </p>
-        <textarea id="login-username">Insert Username Here</textarea>
+        <input id="login-username">Insert Username Here</input>
         <p>Password: </p>
-        <textarea id="login-password">Insert Password Here</textarea>
+        <input id="login-password">Insert Password Here</input>
 
         <label class="switch">
           <input type="checkbox">
@@ -111,11 +116,11 @@
 
       <section id="signup" class="hidden">
         <p>Username: </p>
-        <textarea id="signup-username">Insert Username Here</textarea>
+        <input id="signup-username">Insert Username Here</input>
         <p>Password: </p>
-        <textarea id="signup-password">Insert Password Here</textarea>
+        <input id="signup-password">Insert Password Here</input>
         <p>Reconfirm Password: </p>
-        <textarea id="confirm-password">Confirm Password Here</textarea>
+        <input id="confirm-password">Confirm Password Here</input>
 
         <label class="switch">
           <input type="checkbox">
