--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
             <h1>AYAF & Company</h1>
           </li>
           <li id="cart">
-            <p>Cart</p>
+            <img src="https://media.istockphoto.com/id/1206806317/vector/shopping-cart-icon-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=OFQfvkU48JTYo1aehyB1kPX7sh2CjA5I66Pdmc9qxho="
+            alt="Photo of shopping cart">
+            <p>My Cart</p>
           </li>
           <li>
             <input id="search-bar" type="text" placeholder="Search..">
+            <button id="search-btn">Search</button>
           </li>
           <li id="user-profile">
             <p>Log In/Sign Up</p>
           </li>
         </ul>
       <nav>
+      <button id="back-btn">Back to Search</button>
     </header>
 
     <section id="search">
@@ -112,6 +116,8 @@
         <input id="login-username">Insert Username Here</textarea>
         <p>Password: </p>
         <input id="login-password">Insert Password Here</textarea>
+        <p id="login-error" class="hidden">It seems either your username or password were incorrect,
+          please try again</p>
 
         <label class="switch">
           <input type="checkbox">
