--- a/public/index.html
+++ b/public/index.html
@@ -78,25 +78,26 @@
     <section id="check-out" class="hidden">
       <section id="products">
         <article class="checkout-product">
+          <p>ISBN</p>
           <p>SampleProduct</p>
           <p>Price</p>
         </article>
       </section>
 
       <article id="total">
-        <p>Total Price: Some number</p>
+        <p>Total Price: 0</p>
       </article>
 
       <button id="check-out">Purchase selected items</button>
-      <button id="check-out-all">Purchase all items</button>
+      <button id="select-all">Select All Items</button>
 
       <article id="confirm-purchase" class="hidden">
-        <p>Please confirm your purchase?</p>
+        <p>Please confirm your purchase</p>
         <button id="sure">Yes</button>
         <button id="not-sure">No</button>
       </article>
 
-      <p id="confirmation-number" class="hidden">Your confirmation number for this purchase is: </p>
+      <p id="confirmation-number"></p>
     </section>
 
     <section id="history" class="hidden">
