--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
         <article class="checkout-product">
           <p>ISBN</p>
           <p>SampleProduct</p>
-          <p>Price</p>
+          <p>10</p>
         </article>
       </section>
 
@@ -91,7 +91,8 @@
       <button id="check-out">Purchase selected items</button>
       <button id="select-all">Select All Items</button>
 
-      <article id="confirm-purchase" class="hidden">
+      <article id="
+      " class="hidden">
         <p>Please confirm your purchase</p>
         <button id="sure">Yes</button>
         <button id="not-sure">No</button>
