--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,13 @@
 
     <section id="search">
       <section id="filters">
-        <span>Filter Products By: </span>
-        <span value="author">Author</span>
-        <span value="subject">Subject</span>
-        <span value="price">Price</span>
+        <span>Filters: </span>
+        <span value="subject=math">Subject = Math</span>
+        <span value="subject=science">Subject = Science </span>
+        <span value="subject=history">Subject = History</span>
+        <span value="price>100">Price > 100</span>
+        <span value="price>80">Price > 80</span>
+        <span value="price>60">Price > 60</span>
         <span>Name</span>
       </section>
 
@@ -103,10 +106,6 @@
 
     <section id="history" class="hidden">
       <h1>Transaction History</h1>
-      <article class="purchase">
-        <p>Confirmation Id: </p>
-        <p>U</p>
-      </article>
     </section>
 
     <section id="user" class="hidden">
