--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <ul id="nav_elements">
           <li id="logo">
             <img src="https://media.tenor.com/UZJd1pjj4NMAAAAC/surprised-pikachu.gif">
-            <h1>Inkflux</h1>
+            <h1>Inkflux: Buy Amazing Textbooks</h1>
           </li>
           <li>
             <span>Search By: </span>
