some css changes

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Inkflux: Buy Amazing Textbooks</title>
   </head>
   <body>
@@ -78,12 +77,12 @@
         </div>
         <form class="login modal-form" method="dialog">
           <label class="modal-username">
-            Username:
-            <input type="text" name="username" placeholder="Username">
+            Username
+            <input type="text" name="username">
           </label>
           <label class="modal-password">
-            Password:
-            <input type="password" name="password" placeholder="Password">
+            Password
+            <input type="password" name="password">
           </label>
           <button class="login modal-submit">Login</button>
         </form>
@@ -97,16 +96,16 @@
         </div>
         <form class="signup modal-form" method="dialog">
           <label class="modal-email">
-            Email:
-            <input type="email" name="email" placeholder="Email">
+            Email
+            <input type="email" name="email">
           </label>
           <label class="modal-username">
-            Username:
-            <input type="text" name="username" placeholder="Username">
+            Username
+            <input type="text" name="username">
           </label>
           <label class="modal-password">
-            Password:
-            <input type="password" name="password" placeholder="Password">
+            Password
+            <input type="password" name="password">
           </label>
           <button class="signup modal-submit">Sign Up</button>
         </form>
