implemented user signup, login, and authentication with express-session and connect-sqlite3

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="content">
+    <div id="content">
       <div id="sidebar">
         <h1>Filters</h1>
         <button id="filter-update">Update Filters</button>
@@ -111,5 +111,8 @@
         </form>
       </div>
     </dialog>
+    <div id="account" class="hidden">
+      <div class="welcome"> Welcome! </div>
+    </div>
   </body>
 </html>
